feat: add TypeScript declaration files for API and internal modules